# rsupd

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  rsupd.fpr
.github/workflows/: build.yml
src/: config.rs  doctor.rs  error.rs  identity.rs  lib.rs  manifest.rs  publish.rs  target.rs  util.rs
src/package/: discover.rs  mod.rs  zip.rs
src/update/: hide.rs  install.rs  mod.rs  restart.rs  selfexe.rs  transport.rs
tests/: doctor.rs  http_update.rs  roundtrip.rs
