[package]
name = "rsupd"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Signed release distribution and in-place auto-updater built on the BottleFmt stack"
repository = "https://github.com/KarpelesLab/rsupd"
license = "MIT"
keywords = ["update", "autoupdate", "release", "bottle", "signature"]
categories = ["development-tools", "command-line-utilities"]
build = "build.rs"

[package.metadata.docs.rs]
# Document the full API (producer + consumer); the producer is behind `_cli`.
features = ["_cli"]

[lib]
name = "rsupd"
path = "src/lib.rs"

[[bin]]
name = "rsupd"
path = "src/bin/rsupd.rs"
# The producer/CLI; the library half (the updater) is the default.
required-features = ["_cli"]

[features]
# Default is the consumer updater only — a small surface.
default = []
# The producer side: building, signing, packaging, publishing, the doctor, and
# the `rsupd` binary. Pulls the upload client and JSON.
_cli = ["dep:klbfw", "dep:serde_json"]

[dependencies]
bottlers = "0.1.1"
purecrypto = "0.6.20"
compcol = { version = "0.6.3", default-features = false, features = ["std", "zstd"] }
ciborium = "0.2"
rsurl = "0.1"
base64 = "0.21"
zeroize = "1"
klbfw = { version = "0.1.1", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
